--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,15 +8,35 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/AppTheme.TransitionAppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Test1Activity"></activity>
-        <activity android:name=".ScrollingActivity"/>
+        <activity
+            android:name=".Test1Activity"
+            android:theme="@style/AppTheme.TransitionAppTheme" />
+        <activity
+            android:name=".ScrollingActivity"
+            android:theme="@style/AppTheme.TransitionAppTheme" />
+        <activity
+            android:name=".transitions.TransitionActivity"
+            android:theme="@style/AppTheme.TransitionAppTheme" />
+        <activity
+            android:name=".transitions.AnimationActivity"
+            android:theme="@style/AppTheme.Animation" />
+        <activity android:name=".transitions.ImageListActivity"
+            android:theme="@style/AppTheme.Detail"/>
+        <activity android:name=".transitions.ImageDetailActivity"
+            android:theme="@style/AppTheme.Detail"></activity>
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
 </manifest>
