--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.beiing.animationdemo">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -29,14 +33,13 @@
         <activity
             android:name=".transitions.AnimationActivity"
             android:theme="@style/AppTheme.Animation" />
-        <activity android:name=".transitions.ImageListActivity"
-            android:theme="@style/AppTheme.Detail"/>
-        <activity android:name=".transitions.ImageDetailActivity"
-            android:theme="@style/AppTheme.Detail"></activity>
+        <activity
+            android:name=".transitions.ImageListActivity"
+            android:theme="@style/AppTheme.Detail" />
+        <activity
+            android:name=".transitions.ImageDetailActivity"
+            android:theme="@style/AppTheme.Detail" />
+        <activity android:name=".vipager_transformer.ViewpagerActivity"></activity>
     </application>
-
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
 </manifest>
